# leveldb-android

./: .gitignore  .gitmodules  .travis.yml  LICENSE.txt  README  README.md  build.gradle  settings.gradle
ci/: release.sh
leveldb/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.txt
leveldb/src/androidTest/java/org/leveldb/test/: LevelDBTest.java
leveldb/src/main/: AndroidManifest.xml
leveldb/src/main/cpp/jni/: LevelDBHelper.h  NativeIterator.cc  NativeIterator.h  NativeLevelDB.cc  NativeLevelDB.h  NativeWriteBatch.cc  NativeWriteBatch.h
leveldb/src/main/java/org/leveldb/: LevelDB.java  WriteBatch.java
leveldb/src/main/java/org/leveldb/exception/: LevelDBClosedException.java  LevelDBCorruptionException.java  LevelDBException.java  LevelDBIOException.java  LevelDBNotFoundException.java
leveldb/src/main/jni-prebuild/: .gitignore  Android.mk  Application.mk  com_github_hf_leveldb_Iterator.cc  com_github_hf_leveldb_Iterator.h  com_github_hf_leveldb_LevelDB.cc  com_github_hf_leveldb_LevelDB.h  com_github_hf_leveldb_WriteBatch_Native.cc  com_github_hf_leveldb_WriteBatch_Native.h  com_github_hf_leveldb_implementation_NativeIterator.cc  com_github_hf_leveldb_implementation_NativeIterator.h  com_github_hf_leveldb_implementation_NativeLevelDB.cc  com_github_hf_leveldb_implementation_NativeLevelDB.h  com_github_hf_leveldb_implementation_NativeWriteBatch.cc  com_github_hf_leveldb_implementation_NativeWriteBatch.h  gen-java-headers  org_leveldb_LevelDB.cc  org_leveldb_LevelDB.h  org_leveldb_WriteBatch_Native.cc  org_leveldb_WriteBatch_Native.h  prebuild
(+40 files in other folders)
